test/types/file/invalidMode.good
invalidMode.chpl:2: error: unresolved enumerated type symbol "q"
